Fix KDevelop crashes when trying to debug from command-line

Fixes the crash in KDE bug #367837 that is caused by starting
debugging session from command line:

kdevelop -d gdb dolphin

This caused to ASSERT: QFile::exists(). Current version fix it
by searching full paths for such binaries.

BUG:367837
FIXED-IN: 5.0.1
(cherry picked from commit b386fb1cf30d5d0682b1fd2eebe2f458ebd75e86)